changed product to car, added a seeder sql
